# tauri

./: README.md  index.html  package.json  vite.config.ts
.github/workflows/: publish-npm.yml  release.yml
src/: App.tsx  BundledZOS.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
